make overview table to be fixed, add scroll bar if overflow, make first column and row to be sticky

--- a/app/client/style.css
+++ b/app/client/style.css
@@ -422,3 +422,19 @@ body{
     text-align: start;
   }
 }
+
+#balance-sheet-overview {
+  .overview-table {
+    margin-bottom: 2rem;
+    height: 700px;
+    overflow: auto;
+
+    th:first-child,
+    td:first-child {
+      position: sticky;
+      left: 0;
+      background-color: #fff;
+      z-index: 1;
+    }
+  }
+}
